# wireguard-monitor

./: Cargo.toml  LICENSE  README.md
src/: main.rs  my_style.rs  wgg.rs
