[package]
name = "wireguard-monitor"
version = "0.1.0"
authors = ["Dave McKellar <3187057+dmdmdm@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.11"
cursive = "0.21.1"
lazy_static = "1.4"
nix = { version = "0.30.1", features = [ "term", "process", "signal" ] }
